# nextcloud-async

./: .gitignore  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml  setup.cfg  setup.py
.jenkins/: Dockerfile-flake8  Dockerfile-pydocstyle
nextcloud_aio/: __init__.py  exceptions.py  helpers.py
nextcloud_aio/api/: __init__.py  loginflow.py  wipe.py
nextcloud_aio/api/dav/: __init__.py  files.py
nextcloud_aio/api/ocs/: __init__.py  apps.py  groupfolders.py  groups.py  ldap.py  notifications.py  shares.py  status.py  talk.py  users.py
nextcloud_aio/api/ocs/talk/: rich_objects.py
nextcloud_async/: __init__.py  client.py  exceptions.py  helpers.py  version.py
nextcloud_async/api/: __init__.py  api.py  apps.py  base.py  files.py  groupfolders.py  groups.py  ldap.py  loginflow.py  loginflowv2.py  maps.py  notifications.py  ocs.py  sharees.py  shares.py  status.py  users.py  wipe.py
nextcloud_async/api/base/: loginflowv2.py  wipe.py
nextcloud_async/api/dav/: __init__.py  files.py
nextcloud_async/api/ocs/: __init__.py  apps.py  groupfolders.py  groups.py  ldap.py  notifications.py  shares.py  status.py  users.py
nextcloud_async/api/ocs/talk/: __init__.py  avatars.py  bots.py  calls.py  chat.py  constants.py  exceptions.py  integrations.py  participants.py  polls.py  reactions.py  rich_objects.py
nextcloud_async/api/talk/: __init__.py  avatars.py  bots.py  breakout_rooms.py  calls.py  chat.py  constants.py  conversations.py  exceptions.py  integrations.py  participants.py  polls.py  reactions.py  rich_objects.py  signaling.py  types.py  webinars.py
nextcloud_async/driver/: __init__.py  api.py  base.py  dav.py  ocs.py  talk.py
scripts/: run_coverage.sh
tests/: README.md  __init__.py  base.py  conftest.py  constants.py  docker-compose.yml  helpers.py  test_apps.py  test_file_api.py  test_groupfolders.py  test_groups.py  test_helpers.py  test_ldap.py  test_loginflow.py  test_maps.py  test_notifications.py  test_ocs_general.py  test_shares.py  test_status.py  test_user_api.py  test_users.py  test_wipe.py
tests/docker/: .env  .env_latest  .env_legacy  Dockerfile  README.md  docker-compose.yml
