[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud_async"
version = "0.0.2"
authors = [
  { name="Aaron Segura" },
]
description = "Asynchronous client library for Nextcloud"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10"
]
keywords = ["nextcloud", "asynchronous", "spreed"]
dependencies = ["httpx", "xmltodict", "platformdirs"]

[project.urls]
"Homepage" = "https://github.com/aaronsegura/nextcloud_async"
"Bug Tracker" = "https://github.com/aaronsegura/nextcloud_async/issues"
