[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud_async"
version = "0.1.0b"
authors = [
  { name="Aaron Segura" },
]
description = "Asynchronous client library for Nextcloud"
readme = "README.md"
license = { text="License :: OSI Approved :: GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10"
]
keywords = ["nextcloud", "asynchronous", "spreed"]
dependencies = ["httpx", "xmltodict", "platformdirs", "PyNaCl"]

[project.urls]
"Homepage" = "https://github.com/aaronsegura/nextcloud-async"
"Bug Tracker" = "https://github.com/aaronsegura/nextcloud-async/issues"
