[metadata]
name = nextcloud-async
version = 0.0.2
description = Asynchronous client library for Nextcloud
long_description = file: README.md
url: https://github.com/aaronsegura/nextcloud-async
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
requires-python = '>=3.10'

[options]
packages = find:
include_package_data = True
test_suite = tests/

install_requires =
    httpx
    xmltodict
    platformdirs

[options.packages.find]
exclude =
    tests
    dist
    build

[pycodestyle]
max-line-length = 95

[flake8]
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,node_modules,*venv*,temp.py
max-line-length = 95
count = true
showpep8 = false
show-source = false
statistics = true
ignore = E227

[pydocstyle]
ignore = D107,D203,D213,D105
